src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-dwU-dhF500-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\ndefault column width: U\ndefault window height: F500\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1239 × 500, bounds: 1239 × 688, states: [Activated]
